--- a/Determining_cat_or_dog.ipynb
+++ b/Determining_cat_or_dog.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMrALezHgVZGQaAr4SRuQrI",
+      "authorship_tag": "ABX9TyN/Dw4mkoaSa3sgQkPytpVJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,8 +35,41 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np"
+        "import numpy as np\n",
+        "import tensorflow as tf\n",
+        "import tensorflow_datasets as tfds\n",
+        "from tensorflow.keras.preprocessing.image import load_img, img_to_array\n",
+        "from tensorflow.keras.layers import Dense, GlobalAveragePooling2D, Dropout\n",
+        "import matplotlib.pyplot as plt\n",
+        "from google.colab import files"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train, _ = tfds.load('cats_vs_dogs', split=['train[:100%]'], with_info=True, as_supervised=True)"
+      ],
+      "metadata": {
+        "id": "cyS2wdZ19GpV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SIZE = (224, 224)\n",
+        "def resize_image(img, label):\n",
+        "  img = tf.cast(img, tf.float32)\n",
+        "  img = tf.image.resize(img, SIZE)\n",
+        "  img /= 225.0\n",
+        "  return img, label"
+      ],
+      "metadata": {
+        "id": "aXbdBTJa9arH"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
